--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,21 @@ body{
   background-size: cover; /* Resize the background image to cover the entire container */
   background-attachment: fixed;
   font-family: 'Poppins', sans-serif;
+  animation: fadeIn 1s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+.fadeIn {
+  animation-name: fadeIn;
 }
  
 .container{
@@ -31,12 +46,13 @@ nav{
 .child2{
   width: 60%;
   display: flex;
+  position: sticky;
 }
 
 .top{
   text-align:center;
   align-items: center;
-  height: 500px;
+  height: 600px;
   padding-bottom: 70px;
 }
 
@@ -51,7 +67,7 @@ nav{
 }
 
 .Intropic{
-  width: 45%;
+  width: 55%;
 }
 
 h1{
@@ -64,6 +80,7 @@ h1{
 
 h2{
   font-family: 'Abril Fatface', cursive;
+  color: #B25B5B;
   font-size: 18pt;
 }
 
@@ -94,15 +111,17 @@ p{
   font-weight: 600;
   border:none;
   margin-top: 15px;
+  transition: .25s ease-in;
 }
 
 .port:hover{
   background-color: #CBCFCA;
-  transition: .5s ease-in;
+ 
 }
 
 .card-img-top{
   text-align: center;
+  width: 550px;
 }
 
 .card-deck{
@@ -115,6 +134,7 @@ p{
   background-color: transparent;
   justify-content: center;
 }
+
 
 .card-body{
   width: 400px;
@@ -168,6 +188,7 @@ h5{
 }
 
 .projecttitle{
+  padding-top: 50px;
   padding-bottom: 50px;
 }
 
@@ -189,7 +210,7 @@ h3{
 
 
 .OC_HI{
-  padding-bottom: 50px;
+  padding-bottom: 10px;
 
 }
 
@@ -213,19 +234,66 @@ h3{
   width: 45px;
   }
 
-.LIBox {
-    position: relative;
-    display: inline-block;
-    padding: 15px;
-    transition: 1s ease-in;
-  
-  }
-
-.LIBox:hover {
-  transition: .5s ease-in;
-  
-}
 
 .Mepic{
-  width: 50%;
+  width: 75%;
+}
+
+footer{
+  height: 90px;
+  justify-content: center;
+  display: block;
+}
+
+footer a{
+  color: #B25B5B;
+  padding: 25px;
+  transition: .25s ease-in;
+}
+
+footer a:hover{
+  color: #263627;
+  text-decoration: none;
+}
+
+.social{
+  text-align: right;
+  padding: 25px;
+}
+
+.social a{
+  color: #263627;
+  padding: 15px;
+  transition: .25s ease-in;
+}
+
+.social a:hover{
+  color: #B25B5B;
+  text-decoration: none;
+}
+
+#fp{
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+#fp p{ 
+font-size: 11pt;
+}
+
+strong{
+  color: #B25B5B;
+}
+
+.pres{
+  background-color:#B25B5B;
+  color: white;
+  font-weight: 600;
+  border:none;
+  margin-top: 15px;
+  transition: .25s ease-in; 
+}
+
+.pres:hover{
+ background-color: #263627;
 }
